--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <p class="text-center">
             {{ site.title }} {{ site.time | date: '%Y' }} |
-            Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+            Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a> | Privacy | Website Terms of Use | Cookie Consent © 2018 Altair Engineering, Inc. All Rights Reserved. We are currently listed on Nasdaq as ALTR.
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
