--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,11 @@
         </div>
     </div>
 
+    {% include comments.html %}
     {% include footer.html %}
     {% include js_files.html %}
+    
 </body>
+    
 
 </html>
