--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,12 @@
-  <div id="disqus_thread"></div>
+<style>
+
+disqus_thread {
+  width= 75%;
+  }
+  
+</style>
+
+<div id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_config = function () {
       // Here is an example,
