--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,10 @@
 <style>
 
 disqus_thread {
-  width= 75%;
+  max-width: fit-content;
+  max-height: fit-content;
+  margin-right= 5em;
+  margin-left= 5em;
   }
   
 </style>
