--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -15,7 +15,7 @@
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Docs</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a></li>
-                <li {% if page.sectionid=='forum' %} class="active" {% endif %}><a href="{{ "/allforums/" | prepend: site.baseurl }}">Forum</a></li>
+                <li {% if page.sectionid=='forum' %} class="active" {% endif %}><a href="{{ "/allforums" | prepend: site.baseurl }}">Forum</a></li>
             </ul>
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
