--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,6 +2,17 @@
 layout: default
 ---
 
+<style>
+    
+div.toc {
+        text-align: right;
+    }
+</style>
+
+<div class="toc">
+    >a href="{{site.baseurl}}{{page.url}}"
+</div>
+
 <div class="container">
     <div class="row">
         <div class="col-md-4">
