--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -10,7 +10,7 @@ div.toc {
 </style>
 
 <div class="toc">
-    >a href="{{site.baseurl}}{{page.url}}"
+    <a href="{{site.baseurl}}{{page.url}}">{{page.h4}}</a>
 </div>
 
 <div class="container">
